--- a/style.css
+++ b/style.css
@@ -13,3 +13,69 @@
      overflow: hidden;
      background: linear-gradient(#87ceeb,#e0f6ff ),
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@keyframes jump {
+   0%{
+      bottom: 0%
+   }
+   40% {
+      bottom: 180px;
+
+   }
+
+   50% {
+      bottom: 180px;
+   }
+
+   60% {
+      bottom: 180px;
+   }
+}
+100% {
+   bottom: 0;
+ }
+}
+
+@keyframes clouds-animation {
+   from {
+      right: 100%
+   }
+
+   to {
+      right: 100%;
+   }
+}
+   
+}
